--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <script>
         // Configuración de la API
-        const API_BASE = "http://localhost:5000/exe";
+        const API_BASE = "http://keldo.cat:5000/exe";
 
         async function checkStatus() {
             const badge = document.getElementById('statusBadge');
@@ -249,3 +249,4 @@
     </script>
 </body>
 </html>
+
