--- a/prueba.html
+++ b/prueba.html
@@ -237,9 +237,14 @@
         async function checkStatus() {
             if (isTransitioning) return;
             
-            const reloadIcon = document.querySelector('#reloadBtn i');
-            reloadIcon.style.transition = "transform 0.8s ease";
-            reloadIcon.style.transform = "rotate(360deg)";
+            // Usamos el ID directamente y verificamos que el icono exista
+            const reloadBtn = document.getElementById('reloadBtn');
+            const reloadIcon = reloadBtn ? reloadBtn.querySelector('i') : null;
+
+            if (reloadIcon) {
+                reloadIcon.style.transition = "transform 0.8s ease";
+                reloadIcon.style.transform = "rotate(360deg)";
+            }
 
             try {
                 const response = await fetch(`${API_BASE}?programa=status`);
@@ -248,10 +253,16 @@
             } catch (error) {
                 updateUIState('offline', "ERROR DE CONEXIÓN CON API");
             } finally {
-                setTimeout(() => { reloadIcon.style.transform = "rotate(0deg)"; }, 800);
+                // Devolvemos el icono a su posición original
+                if (reloadIcon) {
+                    setTimeout(() => { 
+                        reloadIcon.style.transform = "rotate(0deg)"; 
+                    }, 800);
+                }
             }
         }
 
+        
         async function sendCommand(cmd) {
             isTransitioning = true;
             const card = document.getElementById('appCard');
@@ -277,9 +288,11 @@
             }
         }
 
-        lucide.createIcons();
-        checkStatus();
-        setInterval(checkStatus, 15000);
+        document.addEventListener('DOMContentLoaded', () => {
+            lucide.createIcons();
+            checkStatus();
+            setInterval(checkStatus, 15000);
+        });
     </script>
 </body>
 </html>
